@@ -43,7 +43,7 @@ PATH=$GST/gstreamer/tools:$GST/gst-plugins/tools:$GST/gst-player/src:$GST/gst-ed
 # /some/path: makes the dynamic linker look in . too, so avoid this
 export LD_LIBRARY_PATH=$GST/prefix/lib${LD_LIBRARY_PATH:+:$LD_LIBRARY_PATH}
 export PKG_CONFIG_PATH=$GST/prefix/lib/pkgconfig:$GST/gstreamer/pkgconfig:$GST/gst-plugins/pkgconfig:$GST/gst-plugins-base/pkgconfig:$GST/gst-python/pkgconfig:$PKG_CONFIG_PATH
-export GST_PLUGIN_PATH=$GST/gstreamer:$GST/gst-plugins:$GST/gst-plugins-base:$GST/gst-ffmpeg:$GST/gst-monkeysaudio:$GST/plugins:$GST_PLUGIN_PATH
+export GST_PLUGIN_PATH=$GST/gstreamer:$GST/gst-plugins:$GST/gst-plugins-base:$GST/gst-plugins-good:$GST/gst-plugins-ugly:$GST/gst-ffmpeg:$GST/gst-monkeysaudio:$GST/plugins:$GST_PLUGIN_PATH
 export MANPATH=$GST/gstreamer/tools:$GST/prefix/share/man:$MANPATH
 pythonver=`python -c "import sys; print sys.version[:3]"`
 export PYTHONPATH=$GST/gst-python:$GST/prefix/lib/python$pythonver/site-packages:$PYTHONPATH
